fix: single case study - team - clippath issue

--- a/styles/components/_team.scss
+++ b/styles/components/_team.scss
@@ -57,9 +57,16 @@
       .image-team {
         height: 100%;
         width: 100%;
-        clip-path: polygon(0 0, 100% 0, 100% 80%, 60% 100%, 0 100%, 0% 50%);
       }
-
+      .clip-me {
+        clip-path: polygon(100% 80%, 60% 100%, 100% 100%);
+        background-color: $anthracite;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
       .svg-iconTeam {
         position: absolute;
         bottom: 0;
@@ -88,6 +95,26 @@
           height: 1px;
           background-color: $turquoise;
           margin-top: 4px;
+        }
+      }
+    }
+
+    .columns {
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+      justify-content: space-between;
+
+      .column {
+        padding: 0;
+        flex-basis: calc(20% - 20px);
+        flex-grow: 0;
+        flex-shrink: 0;
+        box-sizing: border-box;
+
+        @media (max-width: $tablet) {
+          flex-basis: calc(50% - 20px);
+          max-width: fit-content;
         }
       }
     }
